chore(notebook): add link to colab

--- a/deepseek_r1_distill_qwen_fast_api.ipynb
+++ b/deepseek_r1_distill_qwen_fast_api.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/naufalhakim23/deepseek-r1-playground/blob/feat%2Fadd-reliable-log-vllm/deepseek_r1_distill_qwen_fast_api.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "gPVYg0Z9SxCq"
       },
       "source": [
@@ -1121,7 +1131,9 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN4nQ2vr1NuYXpHGF8+VI71",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
